--- a/Our Sourse/src/build.settings
+++ b/Our Sourse/src/build.settings
@@ -2,8 +2,8 @@ settings =
 {
     orientation =
     {
-        default = "landscapeLeft",
-        supported = { "landscapeLeft" },
+        default = "landscapeRight",
+        supported = { "landscapeRight" },
         UIStatusBarHidden = true,
     },
         
